tests/data/charm.yaml
description: Overlay for attaching the current charm
applications:
  calico: null
  kubernetes-control-plane:
    options:
      allow-privileged: "true"
  cilium:
    charm: {{charm}}
    options:
      release: '{{ version }}'
    resources:
      cilium: {{cilium}}
      hubble: {{hubble}}
relations:
- [cilium:cni, kubernetes-control-plane:cni]
- [cilium:cni, kubernetes-worker:cni]
