tests/data/cilium-metrics.json
{
    "data": [
      "cilium_agent_api_process_time_seconds_bucket",
      "cilium_agent_api_process_time_seconds_count",
      "cilium_agent_api_process_time_seconds_sum",
      "cilium_agent_bootstrap_seconds_bucket",
      "cilium_agent_bootstrap_seconds_count",
      "cilium_agent_bootstrap_seconds_sum",
      "cilium_api_limiter_adjustment_factor",
      "cilium_api_limiter_processed_requests_total",
      "cilium_api_limiter_processing_duration_seconds",
      "cilium_api_limiter_rate_limit",
      "cilium_api_limiter_requests_in_flight",
      "cilium_api_limiter_wait_duration_seconds",
      "cilium_bpf_map_ops_total",
      "cilium_bpf_maps_virtual_memory_max_bytes",
      "cilium_bpf_progs_virtual_memory_max_bytes",
      "cilium_controllers_failing",
      "cilium_controllers_runs_duration_seconds_bucket",
      "cilium_controllers_runs_duration_seconds_count",
      "cilium_controllers_runs_duration_seconds_sum",
      "cilium_controllers_runs_total",
      "cilium_datapath_conntrack_dump_resets_total",
      "cilium_datapath_conntrack_gc_duration_seconds_bucket",
      "cilium_datapath_conntrack_gc_duration_seconds_count",
      "cilium_datapath_conntrack_gc_duration_seconds_sum",
      "cilium_datapath_conntrack_gc_entries",
      "cilium_datapath_conntrack_gc_key_fallbacks_total",
      "cilium_datapath_conntrack_gc_runs_total",
      "cilium_drop_bytes_total",
      "cilium_drop_count_total",
      "cilium_endpoint",
      "cilium_endpoint_regeneration_time_stats_seconds_bucket",
      "cilium_endpoint_regeneration_time_stats_seconds_count",
      "cilium_endpoint_regeneration_time_stats_seconds_sum",
      "cilium_endpoint_regenerations_total",
      "cilium_endpoint_state",
      "cilium_errors_warnings_total",
      "cilium_event_ts",
      "cilium_forward_bytes_total",
      "cilium_forward_count_total",
      "cilium_fqdn_gc_deletions_total",
      "cilium_identity",
      "cilium_ip_addresses",
      "cilium_ipam_events_total",
      "cilium_ipcache_errors_total",
      "cilium_k8s_client_api_calls_total",
      "cilium_k8s_client_api_latency_time_seconds_bucket",
      "cilium_k8s_client_api_latency_time_seconds_count",
      "cilium_k8s_client_api_latency_time_seconds_sum",
      "cilium_k8s_event_lag_seconds",
      "cilium_k8s_terminating_endpoints_events_total",
      "cilium_kubernetes_events_received_total",
      "cilium_kubernetes_events_total",
      "cilium_node_connectivity_latency_seconds",
      "cilium_node_connectivity_status",
      "cilium_nodes_all_datapath_validations_total",
      "cilium_nodes_all_events_received_total",
      "cilium_nodes_all_num",
      "cilium_operator_ces_queueing_delay_seconds_bucket",
      "cilium_operator_ces_queueing_delay_seconds_count",
      "cilium_operator_ces_queueing_delay_seconds_sum",
      "cilium_operator_ces_sync_errors_total",
      "cilium_operator_identity_gc_entries",
      "cilium_operator_identity_gc_runs",
      "cilium_operator_number_of_ceps_per_ces_bucket",
      "cilium_operator_number_of_ceps_per_ces_count",
      "cilium_operator_number_of_ceps_per_ces_sum",
      "cilium_operator_process_cpu_seconds_total",
      "cilium_operator_process_max_fds",
      "cilium_operator_process_open_fds",
      "cilium_operator_process_resident_memory_bytes",
      "cilium_operator_process_start_time_seconds",
      "cilium_operator_process_virtual_memory_bytes",
      "cilium_operator_process_virtual_memory_max_bytes",
      "cilium_policy",
      "cilium_policy_endpoint_enforcement_status",
      "cilium_policy_import_errors_total",
      "cilium_policy_l7_denied_total",
      "cilium_policy_l7_forwarded_total",
      "cilium_policy_l7_parse_errors_total",
      "cilium_policy_l7_received_total",
      "cilium_policy_max_revision",
      "cilium_policy_regeneration_time_stats_seconds_bucket",
      "cilium_policy_regeneration_time_stats_seconds_count",
      "cilium_policy_regeneration_time_stats_seconds_sum",
      "cilium_policy_regeneration_total",
      "cilium_process_cpu_seconds_total",
      "cilium_process_max_fds",
      "cilium_process_open_fds",
      "cilium_process_resident_memory_bytes",
      "cilium_process_start_time_seconds",
      "cilium_process_virtual_memory_bytes",
      "cilium_process_virtual_memory_max_bytes",
      "cilium_proxy_redirects",
      "cilium_subprocess_start_total",
      "cilium_triggers_policy_update_call_duration_seconds_bucket",
      "cilium_triggers_policy_update_call_duration_seconds_count",
      "cilium_triggers_policy_update_call_duration_seconds_sum",
      "cilium_triggers_policy_update_folds",
      "cilium_triggers_policy_update_total",
      "cilium_unreachable_health_endpoints",
      "cilium_unreachable_nodes",
      "cilium_version"
    ]
  }
