tests/data/vsphere-overlay.yaml
applications:
  containerd:
    options:
      http_proxy: http://squid.internal:3128
      https_proxy: http://squid.internal:3128
      no_proxy: localhost,127.0.0.1,::1,10.246.154.0/24,10.152.183.0/24,192.168.0.0/16
  vsphere-integrator:
    charm: vsphere-integrator
    channel: edge
    num_units: 1
    trust: true
  vsphere-cloud-provider:
    charm: vsphere-cloud-provider
    channel: edge
machines:
  "0":
    constraints: cores=2 mem=8G root-disk=40G
  "1":
    constraints: cores=2 mem=8G root-disk=40G
relations:
- - vsphere-cloud-provider:certificates
  - easyrsa:client
- - vsphere-cloud-provider:kube-control
  - kubernetes-control-plane:kube-control
- - vsphere-cloud-provider:external-cloud-provider
  - kubernetes-control-plane:external-cloud-provider
- - vsphere-cloud-provider:vsphere-integration
  - vsphere-integrator:clients
